add module-info.java for service and resourcemanager module