@@ -36,6 +36,25 @@
   <properties>
     <jacoco.min.linecoverage>0.01</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.01</jacoco.min.branchcoverage>
+    <javaModulesSurefireArgLine>
+      --add-modules com.azure.cosmos
+      --add-modules com.azure.messaging.eventhubs
+      --add-modules com.azure.messaging.servicebus
+      --add-modules com.azure.security.keyvault.certificates
+      --add-modules com.azure.security.keyvault.secrets
+      --add-modules com.azure.storage.blob
+      --add-modules com.azure.storage.file.share
+      --add-modules com.azure.storage.queue
+      --add-modules com.azure.storage.internal.avro
+      --add-opens com.azure.spring.service/com.azure.spring.service.core=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.cosmos=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.credential=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.eventhubs=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.servicebus=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.blob=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.fileshare=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.queue=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
